# RustProject-Blockchain

./: README.md  dummy.py
dapp/: .env  package-lock.json  package.json
dapp/src/: App.tsx  global.d.ts
dapp/src/contracts/: SensorDataRecorder.json
qt_gui/: main.py  requirements.txt
server/: .env  Cargo.toml  build.rs
server/src/: abi.rs  main.rs
sht20/: Cargo.toml
sht20/src/: main.rs
smartcontract/: hardhat.config.ts  package-lock.json  package.json
smartcontract/contracts/: SensorData.sol
smartcontract/ganache-data/: 000232.ldb  000247.ldb  000263.ldb  000267.ldb  000268.ldb  000269.ldb  000270.ldb  000271.ldb  000272.ldb  000273.ldb  000274.ldb  000275.ldb  000276.ldb  000277.ldb  000278.ldb  LOG  LOG.old  MANIFEST-000248
smartcontract/scripts/: copy-abi.js  deploy.js
